--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-main-bower-files": "^1.2.5",
@@ -26,15 +25,15 @@
     "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-traceur": "^0.17.1",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.3",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
     "merge2": "^0.3.6",
     "open": "0.0.5",
     "tiny-lr": "^0.2.1",
+    "ts-node": "^0.5.4",
+    "tsd": "^0.6.5",
     "typescript": "^1.7.3",
     "typescript-register": "^1.1.0",
     "yargs": "^3.31.0"
