New features: * added `gulp-inject` * new config.json file for inject libraries * new help for gulp options via `yargs` module

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
+    "gulp-inject": "^3.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-main-bower-files": "^1.2.5",
+    "gulp-minify-html": "^1.0.4",
     "gulp-npm-files": "git+https://github.com/gillbeits/gulp-npm-files.git",
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^2.0.1",
@@ -31,6 +33,7 @@
     "gulp-util": "^3.0.7",
     "merge2": "^0.3.6",
     "open": "0.0.5",
+    "slash": "^1.0.0",
     "tiny-lr": "^0.2.1",
     "ts-node": "^0.5.4",
     "tsd": "^0.6.5",
@@ -42,7 +45,7 @@
     "angular2": "latest",
     "es6-shim": "^0.33.13",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-alpha.12",
+    "rxjs": "latest",
     "systemjs": "^0.19.6",
     "zone.js": "0.5.8"
   },
