--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
     "gulp-inject": "^3.0.0",
+    "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-main-bower-files": "^1.2.5",
     "gulp-minify-html": "^1.0.4",
@@ -27,12 +28,16 @@
     "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.1.1",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.3",
     "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "merge2": "^0.3.6",
+    "nib": "^1.1.0",
     "open": "0.0.5",
+    "run-sequence": "^1.1.5",
     "slash": "^1.0.0",
     "tiny-lr": "^0.2.1",
     "ts-node": "^0.5.4",
