--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.1",
+    "gulp-tslint": "^4.1.2",
+    "gulp-tslint-stylish": "^1.1.1",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.3",
@@ -40,6 +42,7 @@
     "tiny-lr": "^0.2.1",
     "ts-node": "^0.5.4",
     "tsd": "^0.6.5",
+    "tslint": "^3.2.0",
     "typescript": "^1.7.3",
     "typescript-register": "^1.1.0",
     "yargs": "^3.31.0"
