--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "merge2": "^0.3.6",
     "nib": "^1.1.0",
     "open": "0.0.5",
+    "serve-static": "^1.10.0",
     "slash": "^1.0.0",
     "tiny-lr": "^0.2.1",
     "ts-node": "^0.5.4",
