--- a/src/config.json
+++ b/src/config.json
@@ -1,14 +1,18 @@
 {
   "inject": {
     "head:js": [
-      "es6-shim/es6-shim.min.js",
-      "systemjs/dist/system.js"
+
     ],
     "head:css": [],
     "body:js": [
-      "angular2/bundles/angular2.js",
-      "angular2/bundles/http.js",
-      "angular2/bundles/router.js"
+      "es6-shim/es6-shim.min.js",
+      "systemjs/dist/system-polyfills.js",
+      "angular2/bundles/angular2-polyfills.js",
+      "systemjs/dist/system.src.js",
+      "rxjs/bundles/Rx.js",
+      "angular2/bundles/angular2.dev.js",
+      "angular2/bundles/http.dev.js",
+      "angular2/bundles/router.dev.js"
     ]
   }
 }
