--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-livereload": "^0.5.4",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.3.0",
